# joutatsu

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  struct.js
backend/: pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  aozora.py  content.py  data.py  dictionary.py  difficulty.py  generation.py  proficiency.py  progress.py  sessions.py  (+2 more)
backend/app/core/: database.py  events.py  exceptions.py  logging.py
backend/app/models/: __init__.py  base.py  content.py  download.py  proficiency.py  progress.py  session.py  user_settings.py  vocabulary.py
backend/app/repositories/: __init__.py  base.py  content_repo.py  proficiency_repo.py  progress_repo.py  session_repo.py  vocabulary_repo.py
backend/app/schemas/: aozora.py  content.py  dictionary.py  difficulty.py  generation.py  proficiency.py  progress.py  session.py  tokenize.py  video_browse.py
backend/app/services/: aozora_service.py  content_service.py  dictionary_service.py  difficulty_service.py  download_manager.py  pdf_service.py  proficiency_service.py  scoring_service.py  text_generation_service.py  tokenizer_service.py  ytdlp_service.py
backend/scripts/: dev.py  setup_data.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_content_api.py  test_data_api.py  test_dictionary_api.py  test_health.py  test_reference_data.py  test_tokenize_api.py
backend/tests/unit/: test_example.py
(+92 files in other folders)
