[project]
name = "joutatsu-backend"
version = "0.1.0"
description = "Joutatsu Japanese learning application backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.6",
    "pypdf>=4.0.0",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
nlp = [
    "sudachipy>=0.6.8",
    "sudachidict-core>=20240109",
    "jamdict>=0.1a11",
    "edge-tts>=6.1.0",
    "jreadability>=0.3.0",
    "wordfreq>=3.1.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
